added digital ocean component for demo purposes

--- a/src/app/directives/directives.component.html
+++ b/src/app/directives/directives.component.html
@@ -63,7 +63,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-lg-5" [ngStyle]="{'text-align': 'center', 'color' : 'blue'}">
+        <div class="col-lg-5" [ngStyle]="{'text-align': 'center', 'color' : 'pink'}">
             <h2 *ngIf="toggle"> Welcome to angular</h2>
         </div>
     </div>
