--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -13,6 +13,9 @@
                 <a class="nav-link" routerLink="/posts">Posts</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" routerLink="/digitalocean">Digital Ocean</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" routerLink="/databinding">Data Binding</a>
             </li>
             <li class="nav-item">
